@@ -146,16 +146,18 @@ create_partitions() {
 }
 
 get_auto_disks() {
-	local dev device
+	local dev device dmtype
 
 	for dev in $DEVICES/*; do
 		[ -d "$dev" ] || continue
 
-		# Skip /dev/mapper/X and /dev/mdX devices
+		# Skip /dev/mapper/X and /dev/mdX but not multipath devices
 		device=$(cat $dev/device)
 		$(echo "$device" | grep -q "/dev/md[0-9]*$") && continue
-		$(echo "$device" | grep -q "/dev/mapper/") && continue
-
+		if echo $device | grep -q ^/dev/mapper/; then
+			dmtype=$(dm_table $device)
+			[  "$dmtype" = multipath ] || continue
+		fi
 		printf "$dev\t$(device_name $dev)\n"
 	done
 }
